# Profile_Builder

./: .gitignore  AUXILIARY_OUTPUTS.md  CHANGELOG.md  LEARNING_GUIDE.md  LICENSE  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_app.bat  setup.py
examples/: example_profile.json
pc_app/: __init__.py  config.py  models.py  pico_serial.py  utils.py  waveform_engine.py  waveform_profile_builder.py
pico_firmware/: main.py
tests/: test_models.py  test_waveform_engine.py
